// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parse foo::bar();  1`] = `
[
  {
    "calls": [
      {
        "end": 20,
        "kind": "call",
        "name": "foo::bar",
        "start": 12,
      },
    ],
    "end": 25,
    "kind": "fn",
    "name": "main",
    "nameElem": {
      "end": 7,
      "kind": "fnName",
      "name": "main",
      "start": 3,
    },
    "start": 0,
    "typeRefs": [],
  },
]
`;

exports[`parse let x: foo::bar;  1`] = `
[
  {
    "calls": [],
    "end": 34,
    "kind": "fn",
    "name": "main",
    "nameElem": {
      "end": 7,
      "kind": "fnName",
      "name": "main",
      "start": 3,
    },
    "start": 0,
    "typeRefs": [
      {
        "end": 27,
        "kind": "typeRef",
        "name": "foo::bar",
        "start": 19,
      },
    ],
  },
]
`;

exports[`parse unicode ident 1`] = `
"module
  text '
  '
  fn Δέλτα()
    decl %Δέλτα
    statement
      text '{}'
  text ' 
  '
  fn réflexion()
    decl %réflexion
    statement
      text '{}'
  text ' 
  '
  fn Кызыл()
    decl %Кызыл
    statement
      text '{}'
  text ' 
  '
  fn 𐰓𐰏𐰇()
    decl %𐰓𐰏𐰇
    statement
      text '{}'
  text ' 
  '
  fn 朝焼け()
    decl %朝焼け
    statement
      text '{}'
  text '
  '
  fn سلام()
    decl %سلام
    statement
      text '{}'
  text ' 
  '
  fn 검정()
    decl %검정
    statement
      text '{}'
  text ' 
  '
  fn שָׁלוֹם()
    decl %שָׁלוֹם
    statement
      text '{}'
  text '
  '
  fn गुलाबी()
    decl %गुलाबी
    statement
      text '{}'
  text '
  '
  fn փիրուզ()
    decl %փիրուզ
    statement
      text '{}'
  text '
  '"
`;
